grid function successfully implemented to index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
-    <link href="styles.css">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div id="container">
 
     </div>
-    <script scr="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
