--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div id="container">
-
-    </div>
+    <button id="changeSize">Change Grid Size</button>
+    <div id="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
